--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://
+spring.datasource.url=${CLEARDB_DATABASE_URL}
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
