--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,3 +4,15 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.hbm2ddl.auto: update
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hikari parameters
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.idleTimeout=600000
+spring.datasource.hikari.maxLifetime=1800000
+
+spring.datasource.initialize=true
+spring.datasource.schema=classpath:schema.sql
+spring.batch.initialize-schema=ALWAYS
+spring.batch.job.enabled: false
