--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,7 +3,7 @@ spring.datasource.url=${CLEARDB_DATABASE_URL}
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
-spring.jpa.properties.hibernate.hbm2ddl.auto: update
+spring.jpa.properties.hibernate.hbm2ddl.auto: create
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
