--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,8 +7,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #SQL.
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=create
